Actualizar appsettings.json

--- a/ConcesionarioWeb/appsettings.json
+++ b/ConcesionarioWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Concesionario": "Data Source=DESKTOP-5QI7J0I\\SQLEXPRESS;Initial Catalog=concesionario;Persist Security Info=False;User ID=sa;Password=admin;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=\"SQL Server Management Studio\";Command Timeout=30"
+    "Concesionario": "#######"
   },
   "Logging": {
     "LogLevel": {
